crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_primary_key_snapshot@composite_primary_key_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Membership(models.Model):
    pk = models.CompositePrimaryKey("tenant_id", "user_id")
    tenant_id = models.IntegerField()
    user_id = models.IntegerField()
    role = models.TextField()

    class Meta:
        db_table = "membership"
