crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_primary_key_snapshot@composite_primary_key_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Membership {
  tenant_id Int
  user_id Int
  role String @db.Text

  @@id([tenant_id, user_id])
  @@map("membership")
}
