crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_unique_constraint_snapshot@composite_unique_constraint_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class AccountAliases(models.Model):
    id = models.IntegerField(primary_key=True)
    tenant_id = models.IntegerField()
    slug = models.TextField()

    class Meta:
        db_table = "account_aliases"
        constraints = [
            models.UniqueConstraint(fields=["tenant_id", "slug"], name="uq_account_aliases__tenant_slug"),
        ]
