crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_unique_constraint_snapshot@composite_unique_constraint_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 249
expression: rendered
---
model AccountAliases {
  id Int @id
  tenant_id Int
  slug String

  @@unique([tenant_id, slug], map: "uq_account_aliases__tenant_slug")
  @@map("account_aliases")
}
