crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_unique_snapshot@composite_unique_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class CompositeUnique(models.Model):
    id = models.IntegerField(primary_key=True)
    tenant_id = models.IntegerField()
    name = models.TextField()

    class Meta:
        db_table = "composite_unique"
        constraints = [
            models.UniqueConstraint(fields=["tenant_id", "name"], name="uq_tenant_name"),
        ]
