crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_unique_snapshot@composite_unique_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type CompositeUnique struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    TenantID int32 `gorm:"column:tenant_id;not null;uniqueIndex:uq_composite_unique__uq_tenant_name" json:"tenant_id"`
    Name string `gorm:"column:name;not null;type:text;uniqueIndex:uq_composite_unique__uq_tenant_name" json:"name"`
}

func (CompositeUnique) TableName() string { return "composite_unique" }
