crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__defaults_snapshot@defaults_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Articles(models.Model):
    id = models.AutoField(primary_key=True)
    published = models.BooleanField(default=False)
    view_count = models.IntegerField(default=0)
    status = models.TextField(default="draft")

    class Meta:
        db_table = "articles"
