crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__defaults_snapshot@defaults_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Articles {
  id Int @id @default(autoincrement())
  published Boolean @default(false)
  view_count Int @default(0)
  status String @default("draft") @db.Text

  @@map("articles")
}
